k8s/apps/books/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: books

spec:
  type: ClusterIP
  selector:
    component: books
  ports:
    - name: http
      port: 8083
      targetPort: http
